# AI-Epoch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 04e010385047_add_email_groups.py  0b54c2166d76_initial_clean_schema.py
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py  curator_agent.py  curator_tools.py  editor_agent.py  extractor_agent.py  qa_agent.py  scout_agent.py  writer_agent.py
app/controller/: __init__.py  admin_controller.py  articles_controller.py  curator_controller.py  email_controller.py  email_group_controller.py  extractor_controller.py  pipelines_controller.py  scout_controller.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  article_model.py  candidate_model.py  email_group_model.py
app/pipeline/: __init__.py  graph.py  nodes.py  progress.py  state.py
app/prompts/: __init__.py
app/repository/: __init__.py  article_repository.py  candidate_repository.py
app/schemas/: __init__.py  admin_schema.py  article_schema.py  candidate_schema.py  curator_schema.py  email_schema.py  extractor_schema.py  pipeline_schema.py  scout_schema.py
app/services/: __init__.py  admin_service.py  article_service.py  assembler_service.py  curator_service.py  email_group_service.py  email_service.py  extract_service.py  scout_service.py  source_resolver_service.py
app/templates/: newsletter_email.html
app/tests/: __init__.py  conftest.py  test_assembler_service.py  test_curator_agent.py  test_curator_filters.py  test_curator_scoring.py  test_deduplication.py  test_editor_agent.py  test_email_service.py  test_extract_service.py  test_extractor_agent.py  test_pipeline_graph.py  test_qa_agent.py  test_scout_agent.py  test_writer_agent.py
app/utils/: __init__.py  logger.py  s3_utils.py
docs/: README.md
frontend/: index.html
scripts/: setup_database.py  start_postgres.sh
(+37 files in other folders)
