[project]
name = "agentic-newsletter-mvp"
version = "0.1.0"
description = "AI-powered newsletter generation system with autonomous agents"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "httpx>=0.25.0",
    "trafilatura>=1.6.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "minio>=7.2.0",
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-google-genai>=0.0.5",
    "langchain-nvidia-ai-endpoints>=0.0.1",
    "langgraph>=0.2.0",
    "google-generativeai>=0.3.0",
    "playwright>=1.40.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
